# rp-pico-toolkit

./: .gitignore  CMakeLists.txt  Readme.md
cli/: CMakeLists.txt  cli.c  cli.h
examples/: example.mk
examples/cli/: CMakeLists.txt  Makefile  main.c
include/: rp_extra_config.h
rp_cli/: CMakeLists.txt  cli.c  cli.h  cmd_parser.c  cmd_parser.h  cmd_registry.h  io.h  readline.c  readline.h  rp_stdio.c  rp_stdio.h
rp_util/: cc_helpers.h  preprocessor.h
